[package]
name = "dotenv-flow"
version = "0.15.0"
authors = [
  "Noemi Lapresta <noemi.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
  "Adam Sharp <adam@sharplet.me>",
  "Arpad Borsos <arpad.borsos@googlemail.com>",
  "Carlo Dell'Acqua <carlo.dellacqua97@gmail.com>",
]
description = "A `dotenv-flow` implementation for Rust"
homepage = "https://github.com/cdellacqua/dotenv-flow.rs"
readme = "../README.md"
keywords = ["environment", "env", "dotenv", "dotenv-flow", "settings", "config"]
license = "MIT"
repository = "https://github.com/cdellacqua/dotenv-flow.rs"
edition = "2018"

[[bin]]
name = "dotenv"
required-features = ["cli"]

[dependencies]
clap = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.0.0"

[features]
cli = ["clap"]
